Update frontend components to match new API and add temporary login bypass

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://doanjava-z61i.onrender.com",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
